--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY package.json ./
-RUN npm ci
+RUN npm install --legacy-peer-deps
 COPY . .
 EXPOSE 3002
 CMD ["node", "index.js"]
